--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: mzionShiny
 Title: Mzion App
-Version: 1.0.0.1
+Version: 1.0.1
 Authors@R: 
     person("Qiang", "Zhang", , "qzhang503@gmail.com", role = c("aut", "cre"))
 Description: Shiny app of Mzion proteomics database search engine
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
+    dplyr,
+    fs,
     golem (>= 0.4.1),
     mzion,
+    readr,
     shiny (>= 1.7.4),
     shinyFiles,
     shinyjs
